plugins {
    id("java")
    id("org.jetbrains.intellij") version "1.15.0"
}

group = "com.nazarov"
version = "2.7.5"

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

// See https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html
intellij {
    version.set("2022.2.5")
}

tasks {
    buildSearchableOptions {
        enabled = false
    }

    patchPluginXml {
        version.set("${project.version}")
        sinceBuild.set("222")
        untilBuild.set("261.*")
    }
}

// Include the generated files in the source set
sourceSets {
    main {
        java {
            srcDirs("src/main/gen")
        }
    }
}

dependencies {
    implementation group: 'com.googlecode.soundlibs', name: 'jlayer', version: '1.0.1.4'
    implementation 'com.tianscar.javasound:javasound-aac:0.9.8'
    implementation group: 'commons-validator', name: 'commons-validator', version: '1.8.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.17.1'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.0-M2'

}

